--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Tetris-Web.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Tetris-Web.data.br",
-        frameworkUrl: buildUrl + "/Tetris-Web.framework.js.br",
-        codeUrl: buildUrl + "/Tetris-Web.wasm.br",
+        dataUrl: buildUrl + "/Tetris-Web.data",
+        frameworkUrl: buildUrl + "/Tetris-Web.framework.js",
+        codeUrl: buildUrl + "/Tetris-Web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Zigurous",
         productName: "Tetris",
